--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ohmyfood</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./accueil/style.css">
     <script src="https://kit.fontawesome.com/b0050657cf.js" crossorigin="anonymous"></script>
 </head>
 
@@ -45,7 +45,7 @@
         <h3 class="h3-restaurants">Restaurants</h3>
         <div class="restaurants">
             <div class="card menilmontant">
-                <a href="../lapalettedugout/lapalettedugout.html" class="lien-vers-menu">
+                <a href="./lapalettedugout/lapalettedugout.html" class="lien-vers-menu">
                     <img src="/Images-et-textes-Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                         alt="table avec plat">
                     <span class="tag-nouveau">Nouveau</span>
@@ -60,7 +60,7 @@
                 <p>Ménilmontant</p>
             </div>
             <div class="card Charonne">
-                <a href="../lanote-enchantée/lanote-enchantée.html" class="lien-vers-menu">
+                <a href="./lanote-enchantée/lanote-enchantée.html" class="lien-vers-menu">
                     <img src="/Images-et-textes-Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                         alt="plat nourriture">
                     <span class="tag-nouveau">Nouveau</span>
@@ -75,7 +75,7 @@
                 <p>Charonne</p>
             </div>
             <div class="card ite rouge">
-                <a href="../alafrançaise/alafrançaise.html" class="lien-vers-menu">
+                <a href="./alafrançaise/alafrançaise.html" class="lien-vers-menu">
                     <img src="/Images-et-textes-Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                         alt="plat oeuf">
                 </a>
@@ -89,7 +89,7 @@
                 <p>Cité rouge</p>
             </div>
             <div class="card folie-mericourt">
-                <a href="../delicedessens/delicedessens.html" class="lien-vers-menu">
+                <a href="./delicedessens/delicedessens.html" class="lien-vers-menu">
                     <img src="/Images-et-textes-Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                         alt="plat long">
                 </a>
