change url menu

--- a/delicedessens/delicedessens.html
+++ b/delicedessens/delicedessens.html
@@ -13,7 +13,7 @@
 <body>
     <nav>
         <div class="fleche">
-            <a href="../accueil/index.html" class="lien-vers-accueil"><i class="fa-solid fa-arrow-left"></i></a>
+            <a href="../index.html" class="lien-vers-accueil"><i class="fa-solid fa-arrow-left"></i></a>
             <img src="/Images-et-textes-Ohmyfood/images/logo/ohmyfood.png" class="photo-logo" alt="logo ohmyfood">
         </div>
         <img src="/Images-et-textes-Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
