changement lien accueil

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ohmyfood</title>
-    <link rel="stylesheet" href="./accueil/style.css">
+    <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/b0050657cf.js" crossorigin="anonymous"></script>
 </head>
 
@@ -16,7 +16,7 @@
         <span class="loader">ohmyfood</span>
     </div>
     <nav>
-        <img src="/Images-et-textes-Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood">
+        <img src="./Images et textes Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood">
         <p><i class="fa-sharp fa-solid fa-location-dot"></i>Paris, Belleville</p>
     </nav>
     <header>
@@ -46,7 +46,7 @@
         <div class="restaurants">
             <div class="card menilmontant">
                 <a href="./lapalettedugout/lapalettedugout.html" class="lien-vers-menu">
-                    <img src="/Images-et-textes-Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                    <img src="./Images-et-textes-Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                         alt="table avec plat">
                     <span class="tag-nouveau">Nouveau</span>
                 </a>
