--- a/lanote-enchantée/lanote-enchantée.html
+++ b/lanote-enchantée/lanote-enchantée.html
@@ -179,7 +179,9 @@
         </div>
     </main>
     <footer>
-        <p class="para-logo">ohmyfood</p>
+        <a href="../index.html">
+            <p class="para-logo">ohmyfood</p>
+        </a>
         <ul>
             <li><i class="fa-solid fa-utensils"></i> Proposer un restaurant</li>
             <li><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</li>
