--- a/alafrançaise/alafrançaise.html
+++ b/alafrançaise/alafrançaise.html
@@ -13,7 +13,7 @@
 <body>
     <nav>
         <div class="fleche">
-            <a href="../index.html" class="lien-vers-accueil"><i class="fa-solid fa-arrow-left"></i></a>
+            <a href="/index.html" class="lien-vers-accueil"><i class="fa-solid fa-arrow-left"></i></a>
             <img src="/Images-et-textes-Ohmyfood/images/logo/ohmyfood.png" class="photo-logo" alt="logo ohmyfood">
         </div>
         <img src="/Images-et-textes-Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
@@ -165,7 +165,9 @@
         </div>
     </main>
     <footer>
-        <p class="para-logo">ohmyfood</p>
+        <a href="../index.html">
+            <p class="para-logo">ohmyfood</p>
+        </a>
         <ul>
             <li><i class="fa-solid fa-utensils"></i> Proposer un restaurant</li>
             <li><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</li>
