--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ohmyfood</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./accueil/style.css">
     <script src="https://kit.fontawesome.com/b0050657cf.js" crossorigin="anonymous"></script>
 </head>
 
@@ -16,26 +16,26 @@
         <span class="loader">ohmyfood</span>
     </div>
     <nav>
-        <img src="./Images et textes Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood">
+        <img src="./Images-et-textes-Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood">
         <p><i class="fa-sharp fa-solid fa-location-dot"></i>Paris, Belleville</p>
     </nav>
     <header>
         <h3>Réservez le menu qui vous convient</h3>
         <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-        <button>Explorez nos restaurants</button>
+        <div class="button">Explorez nos restaurants</div>
     </header>
     <section class="fonctionnement">
         <h3 class="h3-fonctionnement">Fonctionnement</h3>
         <div class="boutton-fonctionnement">
-            <div class="btn">
+            <div class="fonctionnement-page">
                 <span class="circle-number">1</span>
                 <i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant
             </div>
-            <div class="btn btn2">
+            <div class="fonctionnement-page btn2">
                 <span class="circle-number">2</span>
                 <i class="fa-solid fa-list-ul"></i>Composez votre menu
             </div>
-            <div class="btn btn3">
+            <div class="fonctionnement-page btn3">
                 <span class="circle-number">3</span>
                 <i class="fa-solid fa-store"></i>Dégustez au restaurant
             </div>
@@ -49,63 +49,65 @@
                     <img src="./Images-et-textes-Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                         alt="table avec plat">
                     <span class="tag-nouveau">Nouveau</span>
+                    <div class="h4-icon">
+                        <h4>La palette du goût</h4>
+                        <span class="fa-stack fa-1x">
+                            <i class="fa-regular fa-heart fa-stack-1x fa-inverse"></i>
+                            <i class="fa-solid fa-heart fa-stack-1x"></i>
+                        </span>
+                    </div>
+                    <p>Ménilmontant</p>
                 </a>
-                <div class="h4-icon">
-                    <h4>La palette du goût</h4>
-                    <span class="fa-stack fa-1x">
-                        <i class="fa-regular fa-heart fa-stack-1x fa-inverse"></i>
-                        <i class="fa-solid fa-heart fa-stack-1x"></i>
-                    </span>
-                </div>
-                <p>Ménilmontant</p>
             </div>
             <div class="card Charonne">
                 <a href="./lanote-enchantée/lanote-enchantée.html" class="lien-vers-menu">
                     <img src="/Images-et-textes-Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                         alt="plat nourriture">
                     <span class="tag-nouveau">Nouveau</span>
+                    <div class="h4-icon">
+                        <h4>La note enchantée</h4>
+                        <span class="fa-stack fa-1x">
+                            <i class="fa-regular fa-heart fa-stack-1x fa-inverse"></i>
+                            <i class="fa-solid fa-heart fa-stack-1x"></i>
+                        </span>
+                    </div>
+                    <p>Charonne</p>
                 </a>
-                <div class="h4-icon">
-                    <h4>La note enchantée</h4>
-                    <span class="fa-stack fa-1x">
-                        <i class="fa-regular fa-heart fa-stack-1x fa-inverse"></i>
-                        <i class="fa-solid fa-heart fa-stack-1x"></i>
-                    </span>
-                </div>
-                <p>Charonne</p>
             </div>
             <div class="card ite rouge">
                 <a href="./alafrançaise/alafrançaise.html" class="lien-vers-menu">
                     <img src="/Images-et-textes-Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                         alt="plat oeuf">
+                    <div class="h4-icon">
+                        <h4>À la française</h4>
+                        <span class="fa-stack fa-1x">
+                            <i class="fa-regular fa-heart fa-stack-1x fa-inverse"></i>
+                            <i class="fa-solid fa-heart fa-stack-1x"></i>
+                        </span>
+                    </div>
+                    <p>Cité rouge</p>
                 </a>
-                <div class="h4-icon">
-                    <h4>À la française</h4>
-                    <span class="fa-stack fa-1x">
-                        <i class="fa-regular fa-heart fa-stack-1x fa-inverse"></i>
-                        <i class="fa-solid fa-heart fa-stack-1x"></i>
-                    </span>
-                </div>
-                <p>Cité rouge</p>
             </div>
             <div class="card folie-mericourt">
                 <a href="./delicedessens/delicedessens.html" class="lien-vers-menu">
                     <img src="/Images-et-textes-Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                         alt="plat long">
+                    <div class="h4-icon">
+                        <h4>Le délice des sens</h4>
+                        <span class="fa-stack fa-1x">
+                            <i class="fa-regular fa-heart fa-stack-1x fa-inverse"></i>
+                            <i class="fa-solid fa-heart fa-stack-1x"></i>
+                        </span>
+                    </div>
+                    <p>Folie-Méricourt</p>
                 </a>
-                <div class="h4-icon">
-                    <h4>Le délice des sens</h4>
-                    <span class="fa-stack fa-1x">
-                        <i class="fa-regular fa-heart fa-stack-1x fa-inverse"></i>
-                        <i class="fa-solid fa-heart fa-stack-1x"></i>
-                    </span>
-                </div>
-                <p>Folie-Méricourt</p>
             </div>
         </div>
     </main>
     <footer>
-        <p class="para-logo">ohmyfood</p>
+        <a href="./index.html">
+            <p class="para-logo">ohmyfood</p>
+        </a>
         <ul>
             <li><i class="fa-solid fa-utensils"></i> Proposer un restaurant</li>
             <li><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</li>
