--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         </div>
     </section>
     <main>
+        <section>
         <h3 class="h3-restaurants">Restaurants</h3>
         <div class="restaurants">
             <div class="card menilmontant">
@@ -103,6 +104,7 @@
                 </a>
             </div>
         </div>
+        </section>
     </main>
     <footer>
         <a href="./index.html">
