--- a/lapalettedugout/lapalettedugout.html
+++ b/lapalettedugout/lapalettedugout.html
@@ -164,7 +164,9 @@
                         </div>
                     </div>
                 </div>
+                <div class="commander">
                 <button class="boutton-commander">Commander</button>
+                </div>
             </div>
     </main>
     <footer>
