--- a/alafrançaise/alafrançaise.html
+++ b/alafrançaise/alafrançaise.html
@@ -161,7 +161,9 @@
                     </div>
                 </div>
             </div>
-            <button class="boutton-commander">Commander</button>
+            <div class="commander">
+                <button class="boutton-commander">Commander</button>
+                </div>
         </div>
     </main>
     <footer>
