--- a/alafrançaise/alafrançaise.html
+++ b/alafrançaise/alafrançaise.html
@@ -16,7 +16,7 @@
             <a href="/index.html" class="lien-vers-accueil"><i class="fa-solid fa-arrow-left"></i></a>
             <img src="/Images-et-textes-Ohmyfood/images/logo/ohmyfood.png" class="photo-logo" alt="logo ohmyfood">
         </div>
-        <img src="/Images-et-textes-Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+        <img src="./Images-et-textes-Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
             class="photo-accueil" alt="table avec plat">
     </nav>
     <main>
