--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <div class="card Charonne">
                 <a href="./lanote-enchantée/lanote-enchantée.html" class="lien-vers-menu">
-                    <img src="/Images-et-textes-Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                    <img src="./Images-et-textes-Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                         alt="plat nourriture">
                     <span class="tag-nouveau">Nouveau</span>
                     <div class="h4-icon">
@@ -77,7 +77,7 @@
             </div>
             <div class="card ite rouge">
                 <a href="./alafrançaise/alafrançaise.html" class="lien-vers-menu">
-                    <img src="/Images-et-textes-Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                    <img src="./Images-et-textes-Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                         alt="plat oeuf">
                     <div class="h4-icon">
                         <h4>À la française</h4>
@@ -91,7 +91,7 @@
             </div>
             <div class="card folie-mericourt">
                 <a href="./delicedessens/delicedessens.html" class="lien-vers-menu">
-                    <img src="/Images-et-textes-Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                    <img src="./Images-et-textes-Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                         alt="plat long">
                     <div class="h4-icon">
                         <h4>Le délice des sens</h4>
