--- a/lapalettedugout/lapalettedugout.html
+++ b/lapalettedugout/lapalettedugout.html
@@ -14,9 +14,9 @@
     <nav>
         <div class="fleche">
             <a href="../index.html" class="lien-vers-accueil"><i class="fa-solid fa-arrow-left"></i></a>
-            <img src="/Images-et-textes-Ohmyfood/images/logo/ohmyfood.png" class="photo-logo" alt="logo ohmyfood">
+            <img src="../Images-et-textes-Ohmyfood/images/logo/ohmyfood.png" class="photo-logo" alt="logo ohmyfood">
         </div>
-        <img src="./Images-et-textes-Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+        <img src="../Images-et-textes-Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
             class="photo-accueil" alt="table avec plat">
     </nav>
     <main>
