--- a/delicedessens/delicedessens.html
+++ b/delicedessens/delicedessens.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu La Palette du Goût</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <script src="https://kit.fontawesome.com/b0050657cf.js" crossorigin="anonymous"></script>
 </head>
 
